@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-09T16:22:28Z",
-  "count_outdated" : 2650,
-  "uniques_outdated" : 722,
-  "count" : 2672,
+  "timestamp" : "2022-12-10T01:15:44Z",
+  "count_outdated" : 2652,
+  "uniques_outdated" : 723,
+  "count" : 2673,
   "uniques" : 733,
   "clones" : [
-    {
-      "timestamp": "2022-11-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-26T00:00:00Z",
       "count": 2,
@@ -63,8 +56,8 @@
     },
     {
       "timestamp": "2022-12-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
